# numpyext

./: .travis.yml  CMakeLists.txt  Make.mm  README  README.md  rpm.spec.in
deploying/: rpm
docker/: CMakeLists.txt  README
docker/deb/prepare/: Dockerfile
docker/srpm/prepare/: Dockerfile
docker/srpm/test/: Dockerfile.in
examples/: Make.mm
lib/: CMakeLists.txt  Iterator1D.cc  Iterator1D.h  Make.mm  VoidPtr.h  local.def
libnumpyext/: CMakeLists.txt  Iterator1D.h
numpyext/: Make.mm  __init__.py
numpyextmodule/: CMakeLists.txt  Iterator1D_Example.cc  Iterator1D_Example.h  Make.mm  bindings.cc  exceptions.cc  exceptions.h  getdataptr.cc  getdataptr.h  misc.cc  misc.h  numpyextmodule.cc  utils.h  wrapdataptr.h
pyext/: CMakeLists.txt  Iterator1D_Example.cc  Make.mm  bindings.cc  bindings.h  getdataptr.cc  local.def  numpyext.cc  utils.h  wrapdataptr.cc
python/: CMakeLists.txt  MANIFEST.in  Make.mm  setup.py.in
python/numpyext/: __init__.py
tests/: CMakeLists.txt  Make.mm  hello.cc  signon.py  test_mem_leak.py
